tests/messages/valid/siu_s12.hl7
MSH|^~\&|SCHED_APP|CLINIC|RECV_APP|RECV_FAC|20260220132000||SIU^S12|MSG0003|P|2.3
SCH|112233|223344||||ROUTINE|Checkup|MINS|30|m||||20260301100000
PID|1||1003^^^HOSP^MR||Smith^Anna||19751120|F
