tests/messages/errors/bad_msh.hl7
MSH|^~\&|||||20260220133000||ADT^A04||P|2.3
PID|1||1006^^^HOSP^MR||Test^Broken||19700101|F
